--- a/assets/src/scss/pages/dashboard.scss
+++ b/assets/src/scss/pages/dashboard.scss
@@ -10,6 +10,7 @@
 	width: 100%;
 	z-index: 2;
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	height: 50px;
 	position: sticky;
@@ -17,8 +18,7 @@
 	background: #fff;
 
 	&--filter {
-		align-self: flex-start;
-		margin: 10px;
+		margin-left: 10px;
 
 		label {
 			text-transform: uppercase;
@@ -28,11 +28,13 @@
 			font-style: normal;
 			line-height: normal;
 			letter-spacing: normal;
-			color: #333;
+			color: rgba(51, 51, 51, 0.6);
 		}
 	}
 
 	&--search {
+		position: relative;
+		top: -3px;
 		display: inline-flex;
 		align-self: center;
 		width: 30%;
@@ -41,7 +43,7 @@
 		input {
 			width: 100%;
 			font-size: 16px;
-			font-weight: 400;
+			font-weight: 500;
 			font-stretch: normal;
 			font-style: normal;
 			line-height: normal;
@@ -49,6 +51,10 @@
 			color: #1e1e1e;
 			border: 0;
 			padding: 0;
+
+			&::placeholder {
+				color: #1e1e1e;
+			}
 
 			&:focus {
 				box-shadow: none;
@@ -67,19 +73,12 @@
 	}
 
 	&--actions {
-		align-self: flex-end;
 		display: inline-flex;
-		width: 15%;
+		margin-right: 10px;
 
-		a {
-			border-radius: 4px;
-			background-color: #000;
-			color: #fff;
-			width: 120px;
-			margin: 10px;
-			text-align: center;
-			padding: 5px;
-			text-decoration: none;
+		.rev-gen__button {
+			padding: 7px 30px;
+			font-size: 14px;
 		}
 	}
 }
@@ -198,10 +197,15 @@
 			color: #000;
 
 			span {
-				font-size: 16px;
+				font-size: 21px;
 				font-weight: 500;
 				min-width: 165px;
 				display: inline-block;
+			}
+
+			p {
+				margin: 0.5em 0;
+				font-size: 16px;
 			}
 
 			b {
@@ -211,6 +215,8 @@
 			}
 
 			&-updated {
+				margin-top: 0;
+				font-size: 14px;
 				color: rgba(51, 51, 51, 0.6);
 			}
 		}
@@ -275,23 +281,9 @@
 }
 
 .rev-gen-start-tutorial {
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15), 0 2px 6px rgba(0, 0, 0, 0.15);
-	background-color: #fff;
-	text-align: center;
-	border-radius: 4px;
-	padding: 5px 10px;
 	position: fixed;
-	border: 2px solid #000;
-	font-size: 12px;
-	z-index: 15;
-	bottom: 20px;
-	right: 20px;
-	height: 25px;
-	width: 70px;
-	font-weight: 500;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	bottom: 10px;
+	right: 10px;
 	cursor: pointer;
 }
 
