--- a/assets/src/scss/pages/preview.scss
+++ b/assets/src/scss/pages/preview.scss
@@ -1129,17 +1129,6 @@
 	position: fixed;
 	bottom: 10px;
 	right: 10px;
-	padding: 10px 40px;
-	border: 2px solid #1d1d1d;
-	background-color: #fff;
-	color: #1d1d1d;
-	border-radius: 3px;
-	font-weight: 500;
-	font-size: 17px;
-	text-decoration: none;
-	&:hover {
-		color: #1d1d1d;
-	}
 }
 
 select.rev-gen__select2 {
